--- a/_posts/2020-05-28-read-KGAT.md
+++ b/_posts/2020-05-28-read-KGAT.md
@@ -5,8 +5,8 @@ date: 2020-05-29
 image: /assets/images/markdown.jpg
 headerImage: false
 tag:
-- recommendation system
-star: true
+- 추천시스템
+- 논문 분석
 category: blog
 author: 12jeong
 description: Markdown summary with different options
