--- a/_posts/2020-05-28-2code-KGAT.md
+++ b/_posts/2020-05-28-2code-KGAT.md
@@ -1,5 +1,5 @@
 ---
-title: "KGAT: Knowledge Graph Attention Network for Recommendation"
+title: "KGAT: Knowledge Graph Attention Network for Recommendation (2)"
 layout: post
 date: 2020-05-29
 image: /assets/images/markdown.jpg
