--- a/_posts/2021-02-21-pairplot.md
+++ b/_posts/2021-02-21-pairplot.md
@@ -1,3 +1,20 @@
+---
+title: "[Cheat Sheet] Pairplot - 여러 변수간 산점도 "
+layout: post
+date: 2021-02-21
+image: /assets/images/markdown.jpg
+headerImage: false
+tag:
+- Python
+- visualization
+- EDA
+category: blog
+author: 12#
+description:
+---
+#### 요약 :
+
+
 ```python
 import os
 
@@ -124,7 +141,5 @@ g.add_legend()
 
 
 
-    
-![png](output_4_1.png)
-    
 
+![png](output_4_1.png)
